Project_1_AST/src/parser/L485Grammar.jj
/**
 * JavaCC template file created by SF JavaCC plugin 1.5.17+ wizard for JavaCC 1.5.0+
 */
options
{
  JDK_VERSION = "1.6";
  static = true;
}

PARSER_BEGIN(L485Parser)
package parser;

import abstractSyntaxTree.*;

public class L485Parser
{

}

PARSER_END(L485Parser)

SKIP :
{
  " "
| "\r"
| "\t"
| "\n"
| < "//" (~["\n","\r"])* ("\r")? "\n" >
}

TOKEN : /* Keywords */
{
  < DEFUNC : "defunc" >
| < DEFCLASS : "defclass" >
| < METHOD : "method" >
| < FUNC : "func" >
| < COND : "cond" >
| < IF : "if" >
| < THEN : "then" >
| < ELSE: "else" >
| < FI: "fi" >
| < LOAD : "load" >
| < NEW : "new" >
| < VARS: "vars" >
| < ASSIGN: "assign" >
| < TO: "to" >
| < WITH: "with" >
| < TRUE: "true" >
| < FALSE: "false" >

}

TOKEN : /* OPERATORS */
{
  < PLUS : "+" >
| < MINUS : "-" >
| < MULTIPLY : "*" >
| < DIVIDE : "/" >
| < OR : "||" >
| < AND : "&&" >
| < NOT : "!" >
| < EQUAL : "==" >
| < NOTEQUAL : "!=" >
| < LESS : "< " >
| < LESSEQUAL : "<=" >
| < GREATER: ">" >
| < GREATEREQUAL: ">=" >
| < INVOKE: "->" >
}

TOKEN :
{
  <STRING: "'"(~["'"])*"'">
| <#DIGIT: ["0" - "9"] >
| <#ALPHA: ["a" - "z"] | ["A" - "Z"] >
| <ID: <ALPHA> (<ALPHA> | <DIGIT>)*>
| <#EXPONENT: ("e" | "E") ("+" | "-")? (<DIGIT>)+ >
| <FLOATNUM: <INTNUM> (< DOT > (<DIGIT>)+ (<EXPONENT>)? | <EXPONENT>) >
| < #POSITIVE : ["1" - "9"] >
| <INTNUM: "0" | < POSITIVE > (<DIGIT>)* >
| < DOT : "." >
| < LP : "(" >
| < RP : ")" >
| < LB : "{" >
| < RB : "}" >
| < LBK: "[" >
| < RBK: "]" >
| < COMMA: "," >
}

ASTNode program():
{
	ASTNode node;
}
{
  //I removed the ()+ from this becuase it was complaining IDK why it was complaining but it was
    //You spelt because wrong
    (node = functionDef()
    {
		return node;
    }
    |node = classDef()
    {
		return node;
    }
	|node = expression()
    {
		return node;
    }
	|node = loadFile()
    {		return node;
    })+
}

//I think this is good
ASTNode functionDef():
{
	ASTNode node, idListNode, expressionListNode;
	Token id;
}
{
    node = <DEFUNC> id = <ID> <LP> (idListNode = idList())? <RP> expressionListNode = expressionList()
    {		return new FunctionDefNode(id.image, idListNode, expressionListNode);
    }
}



//THIS THING NEEDS WORK
ASTNode idList():
{
	Token id;

	//best variable name ever
	List<String> ids = null;
}
{
    id = <ID> (<COMMA> <ID>)*
    {
		return new idListNode(id.image, ids);
    }
}



//I think this is good
ASTNode classDef():
{
	ASTNode node, classVarsNode, methodsNode;
	Token id;
}
{
    node = <DEFCLASS> id = <ID> <LB> (classVarsNode = classVars())? (methodsNode = methods())? <RB>
    {
		return new ClassDefNode(id.image, classVarsNode, methodsNode);
    }
}
//I think this is good
ASTNode classVars():
{
	ASTNode node, idListNode;
}
{
    <VARS> idListNode = idList()
    {
		return new ClassVarsNode(idListNode);
    }
}


//THIS ONE PROBABLY NEEDS SOME WORK
ASTNode methods():
{
	ASTNode node, idListNode, expressionListNode;
	Token id;
}
{
    (<METHOD> id = <ID> <LP> (idListNode = idList())? <RP> expressionListNode = expressionList())+
    {
		return new MethodsNode(id.image, idListNode, expressionListNode);
    }
}

ASTNode loadFile():
{
	ASTNode node;
	Token id;
}
{
    <LOAD> id = <STRING>
    {
      	node = LoadFileNode(id.Token);
		return node;
    }
}
ASTNode expressionList():
{
	ASTNode node;
}
{
    <LB> (expression())+ <RB>
    {
		return node;
    }
}

//some of these nodes are really difficult haha
ASTNode expression():
{
	ASTNode node;
	ASTNode left, center, right;
}
{
    left = compExpr() (center = logOp() right = compExpr())*
    {
		return new ExpressionBinaryNode(left,center,right);
    }
    |<NOT> node = compExpr()
    {
		return new ExpressionUnaryNode(node);
    }
}
ASTNode logOp():
{
	ASTNode node;
	Token id;
}
{
    id = <OR>
    {
      node = new LogOpNode(id.image);
      return node;
    }
    |id = <AND >
    {
      node = new LogOpNode(id.image);
      return node;
    }
}
ASTNode compExpr():
{
	ASTNode node;
}
{
    addExpr() (compOp() addExpr())*
    {
		return node;
    }
}
ASTNode compOp():
{
	Token id;
}
{
    id = <EQUAL>
    {		return new CompOpNode(id.image); 
    }
    | id = <NOTEQUAL>
    {
		return new CompOpNode(id.image);
    }
    | id = <LESS>
    {
		return new CompOpNode(id.image);    }
    | id = <LESSEQUAL>
    {
		return new CompOpNode(id.image);
    }
    | id = <GREATER>
    {
		return new CompOpNode(id.image);
    }
    | id = <GREATEREQUAL>
    {
		return new CompOpNode(id.image);
    }
}
ASTNode addExpr():
{
	ASTNode leftNode, rightNode;
	Token id;
}
{
    leftNode = mulExpr() (id = < PLUS > rightNode = mulExpr() | id = < MINUS > rightNode = mulExpr())*
    {
		//something goes here come back later jason
    }
}

//this node needs to look similar to the above node
ASTNode mulExpr():
{
	ASTNode node;
}
{
    node = factor() (< MULTIPLY > factor() | < DIVIDE > factor())*
    {
		return node;
    }
}
ASTNode factor():
{
	ASTNode node;
}
{
    operand() (call())?
    {
		return node;
    }
}
ASTNode operand():
{
	ASTNode node;
}
{
    node = varRef()
    {		return node;
    }
    | node = constant()
    {		return node;
    }
    | node = newExpr()
	{		return node;
	}
    | node = ifExpr()
	{		return node;
	}
    | node = funcExpr()
	{		return node;
	}
    | node = assignExpr()
	{		return node;
	}
    | node = condExpr()
	{		return node;
	}
  	| node = withExpr()
	{		return node;
	}
    | <LP> node = expression() <RP>
    {
		return node;
    }
}
ASTNode call():
{
	ASTNode node;
}
{
    <INVOKE> <LP> (paramList())? <RP>
    {
		return node;
    }
}
ASTNode paramList():
{
	ASTNode node;
}
{
    expression() (<COMMA> expression())*
    {
		return node;
    }
}
ASTNode varRef():
{
	ASTNode node;
	Token firstID = null;
	Token secondID = null;
}
{
    firstID = <ID> (<DOT> secondID = <ID>)?
    {
		if(secondID != null)
		{			node = new varRefNode(firstID.image, secondID.image);
			return node;
		}
    }
}
ASTNode constant():
{
	ASTNode node;
	Token holder;
}
{
    id = <INTNUM>
    {		
    }
    | id = <FLOATNUM>
    {
		
    }
    | node = list()
    {
		
    }
    | id = <STRING>
    {
		
    }
    | id = <TRUE>
    {
		
    }
    | id = <FALSE>
    {
		
    }
}
ASTNode list():
{
	ASTNode node;
}
{
    <LBK> constantList() <RBK>
    {
		return node;
    }
}
ASTNode constantList():
{
	ASTNode node;
}
{
    constant() (<COMMA> constant())*
    {
		return node;
    }
}
ASTNode newExpr():
{
	ASTNode node;
}
{
    (      <NEW> <ID>
      )
    {
		return node;
    }
}
ASTNode ifExpr():
{
	ASTNode left, center, right;
	IfExprNode node;
}
{
    <IF> left = expression() <THEN> center = expression() <ELSE> right = expression() <FI>
    {
      	node = new IfExprNode(left,center,right);
		return node;
    }
}
ASTNode funcExpr():
{
	ASTNode node;
}
{
    <FUNC> <LP> (idList())? <RP> expressionList()
    {
		return node;
    }
}
ASTNode assignExpr():
{
	ASTNode node;
}
{
    <ASSIGN> expression() <TO> <ID>
    {
		return node;
    }
}
ASTNode condExpr():
{
	ASTNode node;
}
{
    <COND> condClauses()
    {
		return node;
    }
}
ASTNode condClauses():
{
	ASTNode node;
}
{
    (<LB> expression() expression() <RB>)+
    {
		return node;
    }
}
ASTNode withExpr():
{
	ASTNode node;
}
{
    <WITH> <LP> variableDefs() <RP> expressionList()
    {
		return node;
    }
}
ASTNode variableDefs():
{
	ASTNode node;
}
{
    (<LBK> <ID> expression() <RBK>)*
    {
		return node;
    }
}
